<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.example</groupId>
        <artifactId>client-interoperability</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>legacy2current</artifactId>

    <description>
        This test case tests EJB client to Wildfly server interactions, with the following conditions:
        * EJB client with legacy interoperability versions (wildfly-http-client 1.1.12 from EJB client 26.1.3.Final BOM)
        * Wildfly server with non-legacy interoperability version (wildfly-http-client 2.0.2 from Wildfly server 28.0.0)
    </description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- NOTE: there is a Byteman agent on the clint side as well as the server side, so we use a non-default port here  -->
        <byteman.agent>${project.basedir}/target/byteman.jar</byteman.agent>
        <byteman.plugin>${project.basedir}/target/byteman-jboss-modules-plugin.jar</byteman.plugin>
        <byteman.script>${project.basedir}/target/test-classes/byteman/current-server.btm</byteman.script>
        <byteman.opts>script:${byteman.script},port:9092,sys:${byteman.plugin},modules:org.jboss.byteman.modules.jbossmodules.JBossModulesSystem,listener:true</byteman.opts>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- we need to import the BOM for the legacy version, to get the correct dependencies on the client side -->
            <dependency>
                <groupId>org.wildfly</groupId>
                <artifactId>wildfly-ejb-client-bom</artifactId>
                <version>26.1.3.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- we need to list the direct dependencies for the EJB client - jboss.all? -->
    <dependencies>
        <!-- test deployment -->
        <dependency>
            <groupId>org.example</groupId>
            <artifactId>sampleApp-ee10</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- client side libraries -->
        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jboss-ejb-client</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- http transport for client side libraries -->
        <dependency>
            <groupId>org.wildfly.wildfly-http-client</groupId>
            <artifactId>wildfly-http-ejb-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wildfly.wildfly-http-client</groupId>
            <artifactId>wildfly-http-naming-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wildfly.transaction</groupId>
            <artifactId>wildfly-transaction-client</artifactId>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-bmunit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-install</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <!-- enable debugging (for Byteman) on client side tests-->
                    <compilerArgs>
                        <arg>-g</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>copy-byteman-agent</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman</artifactId>
                                    <type>jar</type>
                                    <outputDirectory>${project.basedir}/target</outputDirectory>
                                    <destFileName>byteman.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman-jboss-modules-plugin</artifactId>
                                    <type>jar</type>
                                    <outputDirectory>${project.basedir}/target</outputDirectory>
                                    <destFileName>byteman-jboss-modules-plugin.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <systemProperties>
                        <property>
                            <name>test.level</name>
                            <value>DEBUG</value>
                        </property>
                        <property>
                            <name>java.util.logging.manager</name>
                            <value>org.jboss.logmanager.LogManager</value>
                        </property>
                        <property>
                            <name>logging.configuration</name>
                            <value>file://${project.basedir}/target/test-classes/logging.properties</value>
                        </property>
                    </systemProperties>
                    <!-- byteman setup for client side tests -->
                    <argLine>-Dorg.jboss.byteman.verbose, -Djdk.attach.allowAttachSelf=true</argLine>
                    <environmentVariables>
                        <BYTEMAN_HOME/>
                    </environmentVariables>
                </configuration>
                <executions>
                    <!-- run the integration tests -->
                    <execution>
                        <id>ee-interop-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <systemProperties>
                                <org.wildfly.ee.namespace.interop>false</org.wildfly.ee.namespace.interop>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>4.1.0.Final</version>
                <configuration>
                    <!-- server -->
                    <skip>false</skip>
                    <version>28.0.0.Final</version>
                    <!-- for server side debugging, replace <version/> with <jbossHome/> -->
                    <!--jbossHome>/home/nrla/jboss/wildfly-28.0.0.Final-debug</jbossHome-->
                    <propertiesFile>${project.basedir}/target/test-classes/system.properties</propertiesFile>
                    <provisioningDir>${project.basedir}/target/current-server</provisioningDir>
                    <!-- deployment -->
                    <targetDir>../sampleApp-ee10/target</targetDir>
                    <filename>sampleApp-ee10-1.0-SNAPSHOT.jar</filename>
                    <add-user>
                        <users>
                            <user>
                                <username>ejb-over-http-user</username>
                                <password>ejb-over-http-password</password>
                                <realm>ApplicationRealm</realm>
                                <application-user>true</application-user>
                            </user>
                        </users>
                    </add-user>
                    <!-- configure the Byteman agent on this server -->
                    <javaOpts>-Djboss.modules.system.pkgs=org.jboss.byteman -javaagent:${byteman.agent}=${byteman.opts}</javaOpts>
                </configuration>
                <executions>
                    <execution>
                        <id>start-current-server</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>stop-current-server</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>undeploy</goal>
                            <goal>shutdown</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jboss.byteman</groupId>
                <artifactId>byteman-rulecheck-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>legacy2current Byteman rule check</id>
                        <goals>
                            <goal>rulecheck</goal>
                        </goals>
                        <configuration>
                            <packages>
                                <package>org.wildfly.httpclient.common</package>
                            </packages>
                            <includes>
                                <include>**/*.btm</include>
                            </includes>
                            <verbose>true</verbose>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>